--- a/gamepage.css
+++ b/gamepage.css
@@ -7,7 +7,7 @@
 
 .answers {
 	font-size: 2.2rem;
-	width: 50%;
+	width: 30%;
 	text-align: center;
 }
 
@@ -17,6 +17,10 @@
 	border: 0.1rem solid blue;
 	margin-bottom: 0.3rem;
 	background-color: light-blue;
+}
+
+.answers-box:hover {
+	cursor: pointer;
 }
 
 
