--- a/gamepage.css
+++ b/gamepage.css
@@ -23,7 +23,27 @@
 	cursor: pointer;
 }
 
+h2 {
+	font-size: 3rem;
+}
 
+.hud {
+	display: flex;
+	font-size: 4rem;
+	text-align: center;
+}
+
+#question-number {
+	margin-left: 1rem;
+}
+
+#score {
+	margin-left: 20rem;
+}
+
+#score-number {
+	margin-left: 1.5rem;
+}
 
 
 
