--- a/app.css
+++ b/app.css
@@ -4,6 +4,18 @@
 	overflow: hidden;
 }
 
+@media only screen and (width: 769px > 1024px) {
+ :root {
+	 font-size: 0.8rem;
+ }
+}
+
+@media only screen and (max-width: 600px) {
+ :root {
+	 font-size: 0.5rem;
+ }
+}
+
 *{
 	box-sizing: border-box;
 }
