--- a/gamepage.css
+++ b/gamepage.css
@@ -44,6 +44,11 @@ h2 {
 	margin-left: 1.5rem;
 }
 
+#points {
+	margin-left: 1rem;
+	margin-right: 1rem;
+}
+
 #progressbar {
 	width: 100%;
 	height: 3rem;
