--- a/app.css
+++ b/app.css
@@ -4,24 +4,33 @@
 	overflow: hidden;
 }
 
-@media only screen and (width: 769px > 1024px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
+	:root {
+		font-size: 40%;
+		background-color: rgb(191, 231, 241);
+	}
+ }
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
  :root {
-	 font-size: 45%;
+	 font-size: 95%;
+	 background-color: aquamarine;
  }
 }
 
-@media only screen and (max-width: 600px) {
- :root {
-	 font-size: 40%;
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+	:root {
+		font-size: 120%;
+		background-color: rgb(238, 218, 36);
+	}
  }
-}
 
 *{
 	box-sizing: border-box;
 }
 
 .center {
-    width: 100vw;
+  width: 100vw;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
